data/derived/comb/progs/unify/prog6625.ml.out
Characters 134-135:
  let rest' = h::filter(t h) in 
                        ^
Error: This expression has type 'a list
       This is not a function; it cannot be applied.
